--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
                         <div class="input-group number-spinner">
                            <button id="phone-minus" class="btn btn-default"><i class="fas fa-minus"></i></button>
                            <input id="phone-number" type="number" min="0" class="form-control text-center" value="1">
-                           <button id="phone=plus" class="btn btn-default"><i class="fas fa-plus"></i></button>
+                           <button id="phone-plus" class="btn btn-default"><i class="fas fa-plus"></i></button>
                         </div>
-                        <h5>$ <span id="phone-total">1219</span> </h5>
+                        <h5>$ <span id="total-phone-price">1219</span> </h5>
                         <img src="images/remove.png" alt="" class="remove-item">
                      </div>
                   </div>
@@ -66,9 +66,9 @@
                      </div>
 
                      <div class="col-md-4 status">
-                        <h5>$1,278</h5>
-                        <h5>$0</h5>
-                        <h5>$1,278</h5>
+                        <h5>$ <span id="sub-total">1,278 </span> </h5>
+                        <h5>$ <span id="tax">0</span></h5>
+                        <h5>$ <span id="total">1,278</span> </h5>
                      </div>
                   </div>
                </div>
